# xy_pydev

./: MANIFEST.in  README.md  pyproject.toml  setup.py
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
test/xy_arg_demo/: MANIFEST.in  pyproject.toml
test/xy_arg_demo/xy_arg_demo/: ARG_DEMO.py  ModuleData.py
test/xy_arg_demo/xy_arg_demo/execute/: Main.py
test/xy_demo/: MANIFEST.in  pyproject.toml
test/xy_demo/xy_demo/: ModuleData.py
test/xy_demo/xy_demo/execute/: Main.py
test/xy_full_demo/: MANIFEST.in  pyproject.toml
test/xy_full_demo/xy_full_demo/: ModuleData.py
test/xy_full_demo/xy_full_demo/execute/: Main.py
xy_pydev/: BaseModuleData.py  ModuleData.py  PyDev.py  Resource.py
xy_pydev/data/: MANIFEST.in.template  pyproject.toml.template
xy_pydev/data/execute/: Main.py.template
xy_pydev/data/src/: BaseModuleData.py.template  Module.py.template  ModuleData.py.template
xy_pydev/execute/: Main.py
