[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

requires-python = ">=3.11.3"

name = "xy_pydev"

authors = [{ name = "yuyangit", email = "yuyangit.0515@qq.com" }]
description = "xy_pydev 模块"

dynamic = ["version", ]

readme = "README.md"

classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["importlib_resources", "xy_console", "xy_string"]

[project.scripts]
xy_pydev = "xy_pydev.execute.Main:main"

[tool.setuptools.packages.find]
where = ["./"]
include = ["xy_pydev"] # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
