[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

requires-python = ">=3.11.3"

name = "xy_arg_demo"

authors = [{ name = "余洋", email = "yuyangit.0515@qq.com" }]
description = "xy_arg_demo 模块"

dynamic = ["version"]

readme = "README.md"

classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["importlib_resources"]

[project.scripts]
xy_arg_demo = "xy_arg_demo.execute.Main:main"

[tool.setuptools.packages.find]
where = ["./"]
include = ["xy_arg_demo"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
